task 5: реализовала мапперы для исходящих документов и поручений & refactoring